# RealSense-ToolTracker

./: .gitignore  AppIcon.inc  CMakeLists.txt  IRStructs.h  IRToolTrack.cpp  IRToolTrack.h  IRToolTracking.cpp  IRToolTracking.h  LICENSE  README.md  ROMParser.h  ViewerWindow.cpp  ViewerWindow.h  win.rc
Python/: udp_receiver.py
Unity/: UDPToolTrackingReceiver.cs
include/: IRToolTrack.h  IRToolTracking.h  ViewerWindow.h  cmdparser.h
resources/: app_icon.icns
src/: IRToolTrack.cpp  IRToolTracking.cpp  ViewerWindow.cpp  viewer_main.cpp
